- fixed taxes and fees - fixed spacing - fixed destination title - fixed total to include added packages

--- a/src/components/bookingSummaryCard/BookingSummaryCard.scss
+++ b/src/components/bookingSummaryCard/BookingSummaryCard.scss
@@ -28,7 +28,8 @@
 	}
 
 	hr {
-		border-top: 1px solid #7070706e;
+		//border-top: 1px solid #7070706e;
+		background-color: #7070706e;
 		margin-top: 16px;
 	}
 
@@ -45,6 +46,9 @@
 		border-radius: 20px;
 		padding: 16px;
 		margin-top: 20px;
+		.taxBreakdown {
+			margin-bottom: 16px;
+		}
 	}
 
 	.light {
